mina: some simplified; support java9